--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <ul class="gnb">
                         <li><a href="#">BRAND</a></li>
                         <li><a href="#">PRODUCTS</a></li>
-                        <li><a href="#"><img src="./images/header/thick_logo.png" alt="logo"></a></li>
+                        <li><h1><a href="#"><img src="./images/header/thick_logo.png" alt="logo"></a></li></h1>
                         <li><a href="#">EVENT</a></li>
                         <li><a href="#">COMMUNITY</a></li>
                     </ul>
