--- a/index.html
+++ b/index.html
@@ -39,12 +39,36 @@
                 </div>
                 <div class="gnb_wrap">
                     <ul class="gnb">
-                        <li><a href="#">BRAND</a></li>
+                        <li class="ul_1"><a href="#">BRAND</a></li>
                         <li><a href="#">PRODUCTS</a></li>
                         <li><h1><a href="#"><img src="./images/header/thick_logo.png" alt="logo"></a></li></h1>
                         <li><a href="#">EVENT</a></li>
                         <li><a href="#">COMMUNITY</a></li>
                     </ul>
+                    <div class="submenu">
+                            <div class="inner_submenu">
+                                <ul class="ul_1">
+                                    <li><a href="#">BRAND MESSAGE</a></li>
+                                    <li><a href="#">BRAND STORY</a></li>
+                                    <li><a href="#">INGREDIENT</a></li>
+                                </ul>
+                                <ul class="margin_right">
+                                    <li><a href="#">BRAND MESSAGE</a></li>
+                                    <li><a href="#">BRAND STORY</a></li>
+                                    <li><a href="#">INGREDIENT</a></li>
+                                </ul>
+                                <ul>
+                                    <li><a href="#">BRAND MESSAGE</a></li>
+                                    <li><a href="#">BRAND STORY</a></li>
+                                    <li><a href="#">INGREDIENT</a></li>
+                                </ul>
+                                <ul>
+                                    <li><a href="#">BRAND MESSAGE</a></li>
+                                    <li><a href="#">BRAND STORY</a></li>
+                                    <li><a href="#">INGREDIENT</a></li>
+                                </ul>
+                            </div>
+                        </div>
                 </div>
                 <!-- js -->
                 <script>
@@ -308,7 +332,10 @@
             </div>
         </div>
     </div><!--wrap_E-->
-   
+
+    <!-- submenu js-->
+    <script src="./js/submenu_script.js"></script>
+    
     <!-- Swiper JS -->
     <script src="./js/cdn.jsdelivr.net_npm_swiper@9_swiper-bundle.min.js"></script>
     <!-- Initialize Swiper -->
