--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="gnb_wrap">
                     <ul class="gnb">
-                        <li class="ul_1"><a href="#">BRAND</a></li>
+                        <li class="ul_1"><a href="./sub/sub1_brand.html">BRAND</a></li>
                         <li><a href="#">PRODUCTS</a></li>
                         <li><h1><a href="#"><img src="./images/header/thick_logo.png" alt="logo"></a></li></h1>
                         <li><a href="#">EVENT</a></li>
@@ -48,9 +48,9 @@
                     <div class="submenu">
                             <div class="inner_submenu">
                                 <ul class="ul_1">
-                                    <li><a href="#">BRAND MESSAGE</a></li>
-                                    <li><a href="#">BRAND STORY</a></li>
-                                    <li><a href="#">INGREDIENT</a></li>
+                                    <li><a href="./sub/sub1_brand.html#section2">BRAND MESSAGE</a></li>
+                                    <li><a href="./sub/sub1_brand.html#section3">BRAND STORY</a></li>
+                                    <li><a href="./sub/sub1_brand.html#section5">INGREDIENT</a></li>
                                 </ul>
                                 <ul class="margin_right">
                                     <li><a href="#">BRAND MESSAGE</a></li>
@@ -97,7 +97,7 @@
                         <br>될 수 있는 해답을 제시합니다.
                     </p>
                     <div class="btn">
-                        <a href="#">MORE INFO</a>
+                        <a href="./sub/sub1_brand.html">MORE INFO</a>
                     </div>
                     <div class="ingredient">
                         <img src="./images/main/ingredient_info_3x.png" alt="ingredient_info">
@@ -105,7 +105,7 @@
                             <p>INGREDIENT
                                 <br>INFO
                             </p>
-                            <div class="btn white"><a href="#">바로가기</a></div>
+                            <div class="btn white"><a href="./sub/sub1_brand.html#section5">바로가기</a></div>
                         </div>
                     </div>
                 </div>
