--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="gnb_wrap">
                     <ul class="gnb">
                         <li class="ul_1"><a href="./sub/sub1_brand.html">BRAND</a></li>
-                        <li><a href="#">PRODUCTS</a></li>
+                        <li><a href="./sub/sub2_products.html">PRODUCTS</a></li>
                         <li><h1><a href="#"><img src="./images/header/thick_logo.png" alt="logo"></a></li></h1>
                         <li><a href="#">EVENT</a></li>
                         <li><a href="#">COMMUNITY</a></li>
@@ -53,9 +53,9 @@
                                     <li><a href="./sub/sub1_brand.html#section5">INGREDIENT</a></li>
                                 </ul>
                                 <ul>
-                                    <li><a href="#">BRAND MESSAGE</a></li>
-                                    <li><a href="#">BRAND STORY</a></li>
-                                    <li><a href="#">INGREDIENT</a></li>
+                                    <li><a href="./sub/sub2_products.html#section2">AROMA THERAPY</a></li>
+                                    <li><a href="./sub/sub2_products.html#section3">BODY CARE</a></li>
+                                    <li><a href="./sub/sub2_products.html#section4">HOME CARE</a></li>
                                 </ul>
                                 <ul>
                                 </ul>
@@ -147,7 +147,7 @@
                         <br>베스트 제품을 지금바로 만나보세요!
                     </p>
                     <div class="btn best_btn">
-                        <a href="#">MORE PRODUCTS</a>
+                        <a href="./sub/sub2_products.html">MORE PRODUCTS</a>
                     </div>
                 </div>
                 <!-- Swiper -->
@@ -254,10 +254,10 @@
         <div id="section4"><!--section4_S-->
             <div class="inner_section4">
                 <ul class="puzzle">
-                    <li class="flip"><a href="#"><img src="./images/main/product3_2x.png" alt="aroma_oil"></a></li>
+                    <li class="flip"><a href="./sub/sub2_products.html#section2"><img src="./images/main/product3_2x.png" alt="aroma_oil"></a></li>
                     <li><a href="#"><img src="./images/main/logo_big.png" alt="logo"></a></li>
-                    <li class="scale"><a href="#"><div class="scale_box"><img src="./images/main/puzzle2.png" alt="puzzle2"></div></a></li>
-                    <li class="flip"><a href="#"><img src="./images/main/product2_2x.png" alt="room_spray"></a></li>
+                    <li class="scale"><a href="./sub/sub2_products.html#section3"><div class="scale_box"><img src="./images/main/puzzle2.png" alt="puzzle2"></div></a></li>
+                    <li class="flip"><a href="./sub/sub2_products.html#section4"><img src="./images/main/product2_2x.png" alt="room_spray"></a></li>
                     <li><a href="#" class="puz_text">
                             <h3>FOR LIVING</h3>
                             <p>공간에 자연을 더하다
@@ -272,8 +272,8 @@
                                 <br>NIGHTY NIGHT
                             </p>
                         </a></li>
-                    <li class="scale"><a href="#"><div class="scale_box"><img src="./images/main/puzzle3.png" alt="puzzle3"></div></a></li>
-                    <li class="flip"><a href="#"><img src="./images/main/product1_2x.png" alt="bodywash"></a></li>
+                    <li class="scale"><a href="./sub/sub2_products.html#section2"><div class="scale_box"><img src="./images/main/puzzle3.png" alt="puzzle3"></div></a></li>
+                    <li class="flip"><a href="./sub/sub2_products.html#section3"><img src="./images/main/product1_2x.png" alt="bodywash"></a></li>
                     <li><a href="#" class="puz_text">
                             <h3>FOR BODY
                             </h3>
@@ -281,7 +281,7 @@
                                 <br>NATURAL ENERGY
                             </p>
                         </a></li>
-                    <li class="scale"><a href="#"><div class="scale_box"><img src="./images/main/puzzle4.png " alt="puzzle"></div></a></li>
+                    <li class="scale"><a href="./sub/sub2_products.html#section4"><div class="scale_box"><img src="./images/main/puzzle4.png " alt="puzzle"></div></a></li>
                 </ul>
             </div>
         </div><!--section4_E-->
