--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                     <ul class="gnb">
                         <li class="ul_1"><a href="./sub/sub1_brand.html">BRAND</a></li>
                         <li><a href="./sub/sub2_products.html">PRODUCTS</a></li>
-                        <li><h1><a href="#"><img src="./images/header/thick_logo.png" alt="logo"></a></li></h1>
-                        <li><a href="#">EVENT</a></li>
-                        <li><a href="#">COMMUNITY</a></li>
+                        <li><h1><a href="index.html"><img src="./images/header/thick_logo.png" alt="logo"></a></li></h1>
+                        <li><a href="./sub/sub3_evnet.html">EVENT</a></li>
+                        <li><a href="./sub/sub4_communuty.html">COMMUNITY</a></li>
                     </ul>
                     <div class="submenu">
                             <div class="inner_submenu">
@@ -60,14 +60,14 @@
                                 <ul>
                                 </ul>
                                 <ul>
-                                    <li><a href="#">BRAND MESSAGE</a></li>
-                                    <li><a href="#">BRAND STORY</a></li>
-                                    <li><a href="#">INGREDIENT</a></li>
+                                    <li><a href="./sub/sub3_evnet.html#section1">CAMPAIGN</a></li>
+                                    <li><a href="./sub/sub3_evnet.html#section2">ONEDAY CLASS</a></li>
+                                    <li><a href="./sub/sub3_evnet.html#section3">EVENT</a></li>
                                 </ul>
                                 <ul>
-                                    <li><a href="#">BRAND MESSAGE</a></li>
-                                    <li><a href="#">BRAND STORY</a></li>
-                                    <li><a href="#">INGREDIENT</a></li>
+                                    <li><a href="./sub/sub4_communuty.html#section1">NOTICE</a></li>
+                                    <li><a href="./sub/sub4_communuty.html#section1">FAQ</a></li>
+                                    <li><a href="./sub/sub4_communuty.html#section1">STORE</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -217,7 +217,7 @@
         </div><!--banner_E-->
         <div id="section3"><!--section3_S-->
             <div class="inner_section3">
-                <div class="box" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                <div class="box" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1800">
                     <div class="left event_img">
                         <img src="./images/main/recycle.jpg" alt="recycle">
                     </div>
@@ -233,7 +233,7 @@
                         <div class="btn"><a href="#">참여하러 가기</a></div>
                     </div>
                 </div>
-                <div class="box" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                <div class="box" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1800">
                     <div class="left event_text ta_r">
                         <h2>Aroma 1-day class</h2>
                         <p>취'향' 발견하기</p>
