--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         <img src="./images/main/recycle.jpg" alt="recycle">
                     </div>
                     <div class="right event_text">
-                        <h2>Save Earth Campain</h2>
+                        <h2>Save Earth Campaign</h2>
                         <p>지속가능한 뷰티, 지속가능한 환경, 지속가능한 삶</p>
                         <p>드랍포레스트는 지속가능성과 환경보호에 대해
                             <br>끊임없이 연구합니다.
