--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <div class="inner_header">
                 <div class="util_wrap">
                     <ul class="util">
-                        <li><a href="#"><img src="./images/header/search_w.png" alt="search"></a></li>
-                        <li><a href="#"><img src="./images/header/personal_w.png" alt="personal"></a></li>
-                        <li><a href="#"><img src="./images/header/cart_w.png" alt="cart"></a></li>
+                        <li><a href="javascript:return false;"><img src="./images/header/search_w.png" alt="search"></a></li>
+                        <li><a href="javascript:return false;"><img src="./images/header/personal_w.png" alt="personal"></a></li>
+                        <li><a href="javascript:return false;"><img src="./images/header/cart_w.png" alt="cart"></a></li>
                     </ul>
                 </div>
                 <div class="gnb_wrap">
@@ -159,7 +159,7 @@
                                 <p class="underline">라벤더 페이셜오일 15ml</p>
                                 <p class="price">18,000원</p>
                             </div>
-                            <div class="cart"><a href="#">CART</a></div>
+                            <div class="cart"><a href="javascript:return false;">CART</a></div>
                         </div>
                         <div class="swiper-slide">
                             <div class="padding_wrap">
@@ -167,7 +167,7 @@
                                 <p class="underline">아로마 포레스트 디퓨저</p>
                                 <p class="price">19,800원</p>
                             </div>
-                            <div class="cart"><a href="#">CART</a></div>
+                            <div class="cart"><a href="javascript:return false;">CART</a></div>
                         </div>
                         <div class="swiper-slide">
                             <div class="padding_wrap">
@@ -175,7 +175,7 @@
                                 <p class="underline">아로마 밸런싱 클렌징 바디솝</p>
                                 <p class="price">22.000원</p>
                             </div>
-                            <div class="cart"><a href="#">CART</a></div>
+                            <div class="cart"><a href="javascript:return false;">CART</a></div>
                         </div>
                         <div class="swiper-slide">
                             <div class="padding_wrap">
@@ -183,7 +183,7 @@
                                 <p class="underline">포레스트 릴렉싱 룸 스프레이</p>
                                 <p class="price">24,000원</p>
                             </div>
-                            <div class="cart"><a href="#">CART</a></div>
+                            <div class="cart"><a href="javascript:return false;">CART</a></div>
                         </div>
                         <div class="swiper-slide">
                             <div class="padding_wrap">
@@ -191,7 +191,7 @@
                                 <p class="underline">오가닉 그린 아로마 바디워시</p>
                                 <p class="price">28,000원</p>
                             </div>
-                            <div class="cart"><a href="#">CART</a></div>
+                            <div class="cart"><a href="javascript:return false;">CART</a></div>
                         </div>
                     </div>
                     <div class="swiper-pagination"></div>
@@ -203,13 +203,13 @@
                 <div class="swiper mySwiper1">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <a href="#"><img src="images/main/banner1.png" alt="banner"></a>
+                      <a href="javascript:return false;"><img src="images/main/banner1.png" alt="banner"></a>
                     </div>
                     <div class="swiper-slide">
-                      <a href="#"><img src="images/main/banner2.png" alt="banner"></a>
+                      <a href="javascript:return false;"><img src="images/main/banner2.png" alt="banner"></a>
                     </div>
                     <div class="swiper-slide">
-                      <a href="#"><img src="images/main/banner3.png" alt="banner"></a>
+                      <a href="javascript:return false;"><img src="images/main/banner3.png" alt="banner"></a>
                     </div>
                   </div>
                 </div>
@@ -230,7 +230,7 @@
                         <p>지금 바로 드랍포레스트와 함께
                             <br>save earth 공병수거 캠페인에 참여해보세요!
                         </p>
-                        <div class="btn"><a href="#">참여하러 가기</a></div>
+                        <div class="btn"><a href="./sub/sub3_evnet.html#section1">참여하러 가기</a></div>
                     </div>
                 </div>
                 <div class="box" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1800">
@@ -243,7 +243,7 @@
                         <p>자연이 주는 선물,
                             <br>천연 에센셜 오일로 나만의 향을 제작해보세요!
                         </p>
-                        <div class="btn"><a href="#">클래스 신청하기</a></div>
+                        <div class="btn"><a href="./sub/sub3_evnet.html#section2">클래스 신청하기</a></div>
                     </div>
                     <div class="right event_img">
                         <img src="./images/main/class.png" alt="class">
@@ -255,16 +255,16 @@
             <div class="inner_section4">
                 <ul class="puzzle">
                     <li class="flip"><a href="./sub/sub2_products.html#section2"><img src="./images/main/product3_2x.png" alt="aroma_oil"></a></li>
-                    <li><a href="#"><img src="./images/main/logo_big.png" alt="logo"></a></li>
+                    <li><a href="javascript:return false;"><img src="./images/main/logo_big.png" alt="logo"></a></li>
                     <li class="scale"><a href="./sub/sub2_products.html#section3"><div class="scale_box"><img src="./images/main/puzzle2.png" alt="puzzle2"></div></a></li>
                     <li class="flip"><a href="./sub/sub2_products.html#section4"><img src="./images/main/product2_2x.png" alt="room_spray"></a></li>
-                    <li><a href="#" class="puz_text">
+                    <li><a href="javascript:return false;" class="puz_text">
                             <h3>FOR LIVING</h3>
                             <p>공간에 자연을 더하다
                                 <br>ROOM THERAPY
                             </p>
                         </a></li>
-                    <li><a href="#" class="puz_text">
+                    <li><a href="javascript:return false;" class="puz_text">
                             <h3>AROMA
                                 <br>THERAPY
                             </h3>
@@ -274,7 +274,7 @@
                         </a></li>
                     <li class="scale"><a href="./sub/sub2_products.html#section2"><div class="scale_box"><img src="./images/main/puzzle3.png" alt="puzzle3"></div></a></li>
                     <li class="flip"><a href="./sub/sub2_products.html#section3"><img src="./images/main/product1_2x.png" alt="bodywash"></a></li>
-                    <li><a href="#" class="puz_text">
+                    <li><a href="javascript:return false;" class="puz_text">
                             <h3>FOR BODY
                             </h3>
                             <p>자연에너지로 숨쉬는 피부
@@ -300,13 +300,13 @@
                             <li>
                                 <h1 class="foot_title">FOLLOW US</h1>
                             </li>
-                            <li><a href="#">
+                            <li><a href="javascript:return false;">
                                 <img src="./images/main/instagram.png" alt="insta">
                                 INSTAGRAM
                             </a></li>
-                            <li><a href="#"><img src="./images/main/youtube.png" alt="youtube">YOUTUBE</a></li>
-                            <li><a href="#"><img src="./images/main/kakao.png" alt="kakao">KAKAOTALK</a></li>
-                            <li><a href="#"><img src="./images/main/facebook.png" alt="facebook">FACEBOOK</a></li>
+                            <li><a href="javascript:return false;"><img src="./images/main/youtube.png" alt="youtube">YOUTUBE</a></li>
+                            <li><a href="javascript:return false;"><img src="./images/main/kakao.png" alt="kakao">KAKAOTALK</a></li>
+                            <li><a href="javascript:return false;"><img src="./images/main/facebook.png" alt="facebook">FACEBOOK</a></li>
                         </ul>
                         <div class="footer_info">
                             <p>(주)드랍포레스트 ㅣ 사업자등록번호: 000-00-00000 ㅣ 대표자:김상아
