--- a/sub/sub4_communuty.html
+++ b/sub/sub4_communuty.html
@@ -308,7 +308,7 @@
         <div id="footer"><!--footer-S-->
             <div class="inner_footer">
                 <ul class="footer_wrap">
-                    <li><h1><a href="/index.html"><img src="../images/sub1/foot_logo.png" alt="logo"></a></h1></li>
+                    <li><h1><a href="../index.html"><img src="../images/sub1/foot_logo.png" alt="logo"></a></h1></li>
                     <li>
                         <h3>COMPANY INFO</h3>
                         <p>(주)드랍포레스트 ㅣ 사업자등록번호: 000-00-00000 ㅣ 대표자:김상아
