--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="wrap"><!--wrap_S-->
         <div id="header"><!--header_S-->
             <div class="video_wrap">
-                <video src="./media/main_header_video.mp4" autoplay muted loop></video>
+                <video src="./media/main_video_make.mp4" autoplay muted loop></video>
                 <div class="dropforest">
                     <p>Drop Forest</p>
                 </div>
