--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <div id="header"><!--header_S-->
             <div class="video_wrap">
                 <video src="./media/main_video_make.mp4" autoplay muted loop></video>
-                <div class="dropforest">
+<!--                 <div class="dropforest">
                     <p>Drop Forest</p>
-                </div>
+                </div> -->
             </div>
             <div class="inner_header">
                 <div class="util_wrap">
